--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ requests==2.24.0
 pytest==6.0.1
 pytest-cov==2.10.1
 Flask-Testing==0.8.0
+Flask
+gunicorn==20.0.4
+Werkzeug==0.16.1
+requests
+flask_sqlalchemy
+pymysql
