--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Flask==1.1.2
 Jinja2==2.11.2
 requests==2.24.0
 pytest==6.0.1
@@ -10,4 +9,5 @@ Werkzeug==0.16.1
 requests
 flask_sqlalchemy
 pymysql
+nginx
 
