--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,52 @@
 version: "3.7"
 services:
-    service1:
-        build: ./service1
-        ports: 
-        - target: 5000
-          published: 5000
-          protocol: tcp
-        environment:
-            DATABASE_URI: ${DATABASE_URI}
-            # DATABASE_URI: ${mysql+pymysql://root:root@35.246.94.253:3306/emaildb}
-            SECRET_KEY: ${fasdfadsfadsfwaefsadv43tw4}
-            # TEST_DATABASE_URI: ${mysql+pymysql://root:root@35.246.94.253:3306/emaildbtest}
-            TEST_SECRET_KEY: ${fasdfadsfadsfwaefsadv43tw4}
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_DATABASE: emaildb, emaildbtest
-    service2: 
-        build: ./service2
-        ports: 
-        - target: 5001
-          published: 5001
-          protocol: tcp 
-    service3: 
-        build: ./service3
-        ports: 
-        - target: 5002
-          published: 5002
-          protocol: tcp
-    service4: 
-        build: ./service4
-        ports: 
-        - target: 5003
-          published: 5003
-          protocol: tcp
+  service1:
+    build: ./service1
+    ports:
+      - target: 5000
+        published: 5000
+        protocol: tcp
+    deploy:
+      replicas: 2
+    environment:
+      DATABASE_URI: ${DATABASE_URI}
+      # SECRET_KEY: ${SECRET_KEY}
+  service2: 
+    build: ./service2
+    ports: 
+      - target: 5001
+        published: 5001
+        protocol: tcp
+    deploy:
+      replicas: 2
+  service3: 
+    build: ./service3
+    ports: 
+      - target: 5002
+        published: 5002
+        protocol: tcp
+    deploy:
+      replicas: 2
+  service4: 
+    build: ./service4
+    ports: 
+      - target: 5003
+        published: 5003
+        protocol: tcp
+    deploy:
+      replicas: 2
+  database:
+    image: mysql:5.7
+    ports:
+      - target: 3306
+        published: 3306
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: emaildb
+    volumes:
+      - type: volume
+        source: database-volume
+        target: /var/lib/mysql
+
+volumes:
+  database-volume:
