--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         protocol: tcp
     environment:
       DATABASE_URI: ${DATABASE_URI}
-      # SECRET_KEY: ${SECRET_KEY}
+      SECRET_KEY: ${SECRET_KEY}
   service2: 
     build: ./service2
     ports: 
