--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - target: 5000
         published: 5000
         protocol: tcp
+    deploy:
+      replicas: 2
     environment:
       DATABASE_URI: ${DATABASE_URI}
       SECRET_KEY: ${SECRET_KEY}
@@ -17,6 +19,8 @@ services:
       - target: 5001
         published: 5001
         protocol: tcp
+    deploy:
+      replicas: 2
   # building service 3
   service3: 
     build: ./service3
@@ -24,6 +28,8 @@ services:
       - target: 5002
         published: 5002
         protocol: tcp
+    deploy:
+      replicas: 2
   # building service 4
   service4: 
     build: ./service4
@@ -31,6 +37,8 @@ services:
       - target: 5003
         published: 5003
         protocol: tcp
+    deploy:
+      replicas: 2
   # building database variables using .env
   database:
     image: mysql:5.7
@@ -44,6 +52,14 @@ services:
       - type: volume
         source: database-volume
         target: /var/lib/mysql
-
+  database2:
+    extends: database for testing
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: emaildbtest
+    volumes:
+      - type: volume
+        source: database-volume
+        target: /var/lib/mysql
 volumes:
   database-volume:
