--- a/roles/manager/tasks/main.yaml
+++ b/roles/manager/tasks/main.yaml
@@ -2,17 +2,20 @@
 - name: Initialise Docker Swarm
   docker_swarm:
     state: present
+
 # register new token
 - name: Inspect Swarm
   docker_swarm:
     state: inspect
-  register: swarm_token
+  register: swarm_info
+  
 #  check if notes are there
 - name: Inspect Swarm Nodes
-  docker_swarm_token:
+  docker_swarm_info:
     nodes: yes
+
 # export variable.
 - name: Export Variable
   add_host:
     name: "join_token"
-    value: "{{ swarm_token.swarm_facts.JoinTokens.Worker }}"
+    value: "{{ swarm_info.swarm_facts.JoinTokens.Worker }}"
