--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,17 +44,17 @@ services:
     deploy:
       replicas: 2
   # building database variables using .env
-  database:
-    image: mysql:5.7
-    ports:
-      - target: 3306
-        published: 3306
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: emaildb
-    volumes:
-      - type: volume
-        source: database-volume
-        target: /var/lib/mysql
-volumes:
-  database-volume:
+#   database:
+#     image: mysql:5.7
+#     ports:
+#       - target: 3306
+#         published: 3306
+#     environment:
+#       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+#       MYSQL_DATABASE: emaildb
+#     volumes:
+#       - type: volume
+#         source: database-volume
+#         target: /var/lib/mysql
+# volumes:
+#   database-volume:
