--- a/roles/dockerswarm/tasks/main.yaml
+++ b/roles/dockerswarm/tasks/main.yaml
@@ -20,7 +20,7 @@
 - name: pip reinstall docker    
   pip:
     name: docker
-    state: forcereinstall
+    state: latest
 
 - name: 'add GPG key'
   apt_key:
