changed user inventory

--- a/roles/manager/tasks/main.yaml
+++ b/roles/manager/tasks/main.yaml
@@ -3,6 +3,7 @@
   git:
     repo: https://github.com/jcbgrub/SFIA_Project_2.git
     # dest: /home/
+    clone: no
     update: yes
 
 #  init swarm
