--- a/roles/dockerswarm/tasks/main.yaml
+++ b/roles/dockerswarm/tasks/main.yaml
@@ -1,3 +1,4 @@
+# Install Packages
 - name: 'update apt and install preliminary packages'
   apt:
     pkg:
@@ -12,6 +13,7 @@
     state: latest
     update_cache: true
 
+#  Make sure docker-py is uninstalled to make sure there complications with the python versioning and Ansbile
 - name: pip uninstall docker-py    
   pip:
     name: docker-py
