--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   # building service 1 and DB
   service1:
     build: ./service1
-    image: sch0tterfoinfoin/service1
+    image: docker.io/sch0tterfoinfoin/service1:latest
     ports:
       - target: 5000
         published: 5000
@@ -16,7 +16,7 @@ services:
   # building service 2
   service2: 
     build: ./service2
-    image: sch0tterfoinfoin/service2
+    image: docker.io/sch0tterfoinfoin/service2:latest
     ports: 
       - target: 5001
         published: 5001
@@ -26,7 +26,7 @@ services:
   # building service 3
   service3: 
     build: ./service3
-    image: sch0tterfoinfoin/service3
+    image: docker.io/sch0tterfoinfoin/service3:latest
     ports: 
       - target: 5002
         published: 5002
@@ -36,7 +36,7 @@ services:
   # building service 4
   service4: 
     build: ./service4
-    image: sch0tterfoinfoin/service4
+    image: docker.io/sch0tterfoinfoin/service4:latest
     ports: 
       - target: 5003
         published: 5003
